# tinyann

./: .gitignore  CMakeLists.txt  COMPATIBILITY.md  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: tinyannConfig.cmake.in
data/: vectors.txt
include/tinyann/: text_io.hpp  tinyann.hpp
src/: cli.cpp
tests/: test_tinyann.cpp
